# morph

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  README.txt  editor.html
.cargo/: config
assets/: game.ini
assets/builder/css/: style.css
assets/builder/js/: main.js
assets/level/: level.ini
assets/level/desert/: info.json
assets/level/jungle/: info.json
src/: lib.rs  main.rs
src/game/: config.rs  mod.rs
src/game/ecs/: event.rs  mod.rs
src/game/ecs/component/: animation.rs  lifetime.rs  mod.rs  physic.rs  render.rs  story.rs
src/game/ecs/resource/: mod.rs  physix.rs  states.rs  story.rs  time.rs
src/game/ecs/system/: animation.rs  input_camera.rs  input_morph.rs  lifetime.rs  mod.rs  output.rs  physic_follow.rs  physic_force.rs  physic_interaction.rs  physic_read.rs  physic_sync.rs  physic_update.rs  physic_write.rs  renderer.rs  story_interaction.rs  story_morph.rs  story_morph_animation.rs  story_object.rs  story_object_animation.rs
src/game/ecs/system/old/: animation.rs  interaction.rs  lifetime.rs  mod.rs  morph.rs  particle.rs  physic.rs  renderer.rs  role.rs
src/game/fx/: graphics.rs  mod.rs  textures.rs
src/game/fx/glsl/: glyph.glslf  glyph.glslv  gui.glslf  gui.glslv  quad.glslf  quad.glslv
src/game/resource/: context.rs  event.rs  gui.rs  input.rs  mod.rs  package.rs  scene.rs
src/game/state/: game_state.rs  level.rs  level_failure.rs  level_pause.rs  level_success.rs  menu.rs  menu_package.rs  menu_package_level.rs  menu_settings.rs  mod.rs
src/game/state/level/: ToDo.txt  game_state.rs  gui.rs  mod.rs  scene.rs  state.rs
src/game/state/level_failure/: game_state.rs  gui.rs  mod.rs
src/game/state/level_pause/: game_state.rs  gui.rs  mod.rs
src/game/state/level_success/: game_state.rs  gui.rs  mod.rs
src/game/state/menu/: game_state.rs  gui.rs  mod.rs
src/game/state/menu_package/: game_state.rs  gui.rs  mod.rs
src/game/state/menu_package_level/: game_state.rs  gui.rs  mod.rs
src/game/state/menu_settings/: game_state.rs  gui.rs  mod.rs
src/game/utils/: map.rs  mod.rs  vec.rs
