[package]
name = "morph-it"
version = "0.1.0"
authors = ["Philipp Kaiser <philippxkaiser@googlemail.com>"]
edition = "2018"


[[bin]]
name = "morph_it_bin" # Change this to something unique
path = "src/main.rs"

[lib]
name = "morph_it"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
game-gl = { git = "https://github.com/Kaiser1989/game-gl", rev = "f3ffb29" }
specs = { version = "0.16.1", features = ["specs-derive", "shred-derive"] }
log = "0.4.11"
simple_logger = "5.0.0"
shrev = "1.1.1"
rusttype = "0.9.2"
lazy_static = "1.4.0"
rust-ini = "0.21.1"
enum-map = { version = "0.6.4", features = ["serde"] }
enum-iterator = "0.6.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.132"
nalgebra = { version = "0.24.0", features = ["serde-serialize"] }
nalgebra-glm = "0.10.0"
ncollide2d = "0.27.0"
nphysics2d = "0.19.0"
itertools = "0.13.0"
rand = "0.8.5"
smallvec = "1.6.1"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.5.0"

[package.metadata.android]
build_targets = ["aarch64-linux-android", "x86_64-linux-android"]
opengles_version_major = 3
opengles_version_minor = 0
assets = "assets"
fullscreen = true
