[package]
name = "morph-it"
version = "0.1.0"
authors = ["Philipp Kaiser <philippxkaiser@googlemail.com>"]
edition = "2021"

[lib]
#name = "main"
crate-type = ["cdylib"]

[[bin]]
name = "morph-it-bin"
path = "src/lib.rs"
required-features = ["desktop"]

[features]
desktop = []

[dependencies]
game-gl = { path = "../game-gl/game_gl" }                                   # git = "https://github.com/Kaiser1989/game-gl", rev = "60457e7" }
specs = { version = "0.20.0", features = ["specs-derive", "shred-derive"] }
shrev = "1.1.1"
rusttype = "0.9.2"
lazy_static = "1.4.0"
rust-ini = "0.21.1"
enum-map = { version = "2.7.3", features = ["serde"] }
enum-iterator = "2.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.61"
nalgebra = { version = "0.24.0", features = ["serde-serialize"] }
nalgebra-glm = "0.10.0"
ncollide2d = "0.27.0"
nphysics2d = "0.19.0"
itertools = "0.13.0"
rand = "0.8.5"
smallvec = "1.6.1"
log = "0.4.11"

[package.metadata.android]
build_targets = [
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android",
]
opengles_version_major = 3
opengles_version_minor = 2
assets = "assets"
fullscreen = true
